--- a/client/public/CNV/cnv.html
+++ b/client/public/CNV/cnv.html
@@ -57,7 +57,7 @@
 <!-- Data configuration -->
 <script src="./lib/jquery.js" ></script>
 <script src="./lib/d3.js"> </script>
-<script src="./lib/NGCircos.js"></script>
+<script src="./lib/NGCircosPlot.js"></script>
 <script src="./js/BACKGROUND01.js"></script>
 <script src="./js/CNV01.js"></script>
 <script src="./js/BACKGROUND02.js"></script>
