--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mosaic Tiler - Mosaic Chromosomal Alterations Tool</title>
+  <title>Mosaic</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -15,39 +15,13 @@
     gtag("js", new Date());
     gtag("config", "UA-62346354-30");
   </script>
-    <link href="./CNV/css/bootstrap.min.css " rel="stylesheet">
-    <link href="./CNV/css/metisMenu.min.css" rel="stylesheet">
-    <link href="./CNV/css/timeline.css" rel="stylesheet">
-    <!-- <link href="css/sb-admin-2.css" rel="stylesheet"> -->
-    <link href="./CNV/css/morris.css" rel="stylesheet">
-    <link href="./CNV/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="./CNV/css/google-code-prettify.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="./CNV/css/bootstrap.min.js"></script>
-    <script src="./CNV/css/metisMenu.min.js"></script>
-    <script src="./CNV/css/raphael-min.js"></script>
-    <script src="./CNV/css/morris.min.js"></script>
-    <!-- <script src="css/sb-admin-2.js"></script> -->
-    <script src="./CNV/css/google-code-prettify.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.map"></script> -->
-   
-    <link src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/css/sb-admin-2.css" rel="stylesheet">
-    </script>
-    <link src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/css/sb-admin-2.min.css"
-      rel="stylesheet">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/js/sb-admin-2.js"
-      crossorigin="anonymous"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!-- [if lt IE 9]> -->
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 </head>
 <style>
   div svg path {
-    stroke-width: 0px;
+    /* stroke-width: 0px; */
+    position: absolute;
   }
+
 </style>
 <body class="d-flex flex-column vh-100" react-cloak >
   <noscript>You need to enable JavaScript to run this app.</noscript>
