remove the number in legend

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,17 +38,8 @@
     <div class="bg-primary text-light py-2 d-none d-md-block">
       <div class="container">
         <h1 class="h5">
-          Mosaic Tiler -
-          <!-- prettier-ignore -->
-          <span style="color: #bb0e3d">M</span>
-          osaic
-          <!-- prettier-ignore -->
-          <span style="color: #bb0e3d">C</span>
-          hromosomal
-          <!-- prettier-ignore -->
-          <span style="color: #bb0e3d">A</span>
-          lterations
-          <span style="color: #bb0e3d">Tool</span>
+          Mosaic Tiler 
+         
         </h1>
       </div>
     </div>
