--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mosaic</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
+  <script async src="main.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -16,13 +17,7 @@
     gtag("config", "UA-62346354-30");
   </script>
 </head>
-<style>
-  div svg path {
-    /* stroke-width: 0px; */
-    position: absolute;
-  }
 
-</style>
 <body class="d-flex flex-column vh-100" react-cloak >
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <header class="flex-grow-0">
