--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,8 +38,7 @@
     <div class="bg-primary text-light py-2 d-none d-md-block">
       <div class="container">
         <h1 class="h5">
-          Mosaic Tiler 
-         
+          mCA Explorer - Mosaic Chromosomal Alteration Explorer
         </h1>
       </div>
     </div>
