--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mosaic</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
-  <script async src="main.js"></script>
+  <!-- <script async src="./main.js"></script> -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
