--- a/client/public/index.html
+++ b/client/public/index.html
@@ -93,6 +93,9 @@
             <div class="h5 mb-1 font-weight-light">MORE INFORMATION</div>
             <ul class="list-unstyled mb-0">
               <li>
+                version
+              </li>
+              <li>
                 <a class="text-light" target="_blank" href="http://www.hhs.gov/">
                   U.S. Department of Health and Human Services
                 </a>
