--- a/client/public/index.html
+++ b/client/public/index.html
@@ -110,6 +110,9 @@
               <li>
                 <a class="text-light" target="_blank" href="http://usa.gov/">USA.gov</a>
               </li>
+              <li>
+               version
+              </li>
             </ul>
           </div>
         </div>
