add version number

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -111,7 +111,7 @@
                 <a class="text-light" target="_blank" href="http://usa.gov/">USA.gov</a>
               </li>
               <li>
-               version
+               Version 1.0
               </li>
             </ul>
           </div>
