adjust plot size

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mosaic</title>
+    <base href="%PUBLIC_URL%" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>mCA</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
   <!-- <script async src="./main.js"></script> -->
   <script>
@@ -30,9 +31,9 @@
         </span>
       </a>
     </div>
-    <div class="bg-primary text-light py-2 d-none d-md-block">
+    <div class="bg-primary text-light align-items-center py-2 d-none d-md-block">
       <div class="container">
-        <h1 class="h5">
+        <h1 class="h5 mx-5">
           mCA Explorer - Mosaic Chromosomal Alteration Explorer
         </h1>
       </div>
