adjust the font of menu

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <base href="%PUBLIC_URL%" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>mCA</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
@@ -17,6 +18,11 @@
     gtag("js", new Date());
     gtag("config", "UA-62346354-30");
   </script>
+  <style>
+    body {
+      font-family: 'Inter';
+    }
+  </style>
 </head>
 
 <body class="d-flex flex-column vh-100" react-cloak >
