--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
 
   <main id="root" class="d-flex flex-column flex-grow-1 align-items-stretch bg-light"></main>
  
-  <footer class="flex-grow-0">
+  <footer id="footer" class="flex-grow-0">
     <div class="bg-primary text-light py-4">
       <div class="container">
         <div class="mb-4">
