add download function for circle plot, two comparison plots

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <base href="%PUBLIC_URL%" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>mCA</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
