add more information for download files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>mCA</title>
+    <title>mCA Explorer</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
   <!-- <script async src="./main.js"></script> -->
   <script>
