--- a/client/public/index.html
+++ b/client/public/index.html
@@ -64,7 +64,7 @@
             <div class="h5 mb-1 font-weight-light">CONTACT INFORMATION</div>
             <ul class="list-unstyled mb-0">
               <li>
-                <a class="text-light" href="mailto:NCIcProSiteWebAdmin@mail.nih.gov">
+                <a class="text-light" href="mailto:NCImcaExplorerWebAdmin@mail.nih.gov">
                   Contact Us
                 </a>
               </li>
