change the home page layout

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,13 +37,13 @@
         </span>
       </a>
     </div>
-    <div class="bg-primary text-light align-items-center py-2 d-none d-md-block">
+    <!-- <div class="bg-primary text-light align-items-center py-2 d-none d-md-block">
       <div class="container">
         <h1 class="h5 mx-5">
           mCA Explorer - Mosaic Chromosomal Alteration Explorer
         </h1>
       </div>
-    </div>
+    </div> -->
   </header>
 
   <main id="root" class="d-flex flex-column flex-grow-1 align-items-stretch bg-light"></main>
