--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,27 +2,26 @@
 <html lang="en">
 
 <head>
+
     <base href="%PUBLIC_URL%" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>mCA Explorer</title>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-30"></script>
-  <!-- <script async src="./js/googlegtag.js"></script> -->
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "UA-62346354-30");
-  </script>
-  <style>
-    body {
-      font-family: 'Inter';
-    }
-  </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TZKNKFR0J4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-TZKNKFR0J4');
+    </script>
+    <style>
+      body {
+        font-family: 'Inter';
+      }
+    </style>
 </head>
 
 <body class="d-flex flex-column vh-100" react-cloak >
