--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,15 @@
 
 <body class="d-flex flex-column vh-100" react-cloak >
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <section class="usa-banner" aria-label="Official government website">
+    <header class="usa-banner__header">
+      <div class="usa-banner__inner">
+        <div class="usa-banner__header-text">
+          An official website of the United States government
+        </div>
+      </div>
+    </header>
+  </section>
   <header class="nci-header nci-header--extended" aria-label="NIH National Cancer Institute">
     <div class="nci-header__navbar">
       <div class="nci-logo" id="extended-mega-logo">
