use Navbar component to have the active class underline

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   
-    <nav aria-label="Primary Navigation Example" class="nci-header-nav">
+    <!-- <nav aria-label="Primary Navigation Example" class="nci-header-nav">
       <div class="nci-header-nav__inner">
         <ul class="nci-header-nav__primary">
           <li class="nci-header-nav__primary-item">
@@ -76,7 +76,7 @@
          
         </ul>
       </div>
-    </nav>
+    </nav> -->
   </header>
 
   <main id="root" class="d-flex flex-column flex-grow-1 align-items-stretch bg-light"></main>
