Adjust the footer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -96,9 +96,8 @@
                         class="usa-footer__primary-link usa-footer__nci-collapse-header">About</button><span
                         class="usa-footer__primary-link usa-footer__nci-list-header">About</span></div>
                     <ul aria-label="Header 1 Site" class="usa-list usa-list--unstyled hidden " id="accordion1">
-                      <li class="usa-footer__secondary-link"><a href="/develop/about/">About NCIDS</a></li>
-                      <li class="usa-footer__secondary-link"><a href="/develop/design-principles/">Design Principles</a>
-                      </li>
+                      <li class="usa-footer__secondary-link"><a href="/#/about/">About mCA Explorer</a></li>                      
+                      <li class="usa-footer__secondary-link"><a  href="mailto:NCImcaExplorerWebAdmin@mail.nih.gov">Contact Us</a></li>
                     </ul>
                   </section>
                 </div>
@@ -108,9 +107,8 @@
                         class="usa-footer__primary-link usa-footer__nci-collapse-header">Resources</button><span
                         class="usa-footer__primary-link usa-footer__nci-list-header">Resources</span></div>
                     <ul aria-label="Header 2 Site" class="usa-list usa-list--unstyled hidden " id="accordion2">
-                      <li class="usa-footer__secondary-link"><a href="/develop/get-started/">Getting Started</a></li>
-                      <li class="usa-footer__secondary-link"><a href="/develop/foundations/">Foundations</a></li>
-                      <li class="usa-footer__secondary-link"><a href="/develop/components/">Components</a></li>
+                      <li class="usa-footer__secondary-link"><a href="/#/mosaic">mCA Explorer</a></li>
+                      <li class="usa-footer__secondary-link"><a href="/#/api">API Access</a></li>
                     </ul>
                   </section>
                 </div>
