add banner image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-minimal.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-home-landing.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-minimal.css?samhc4">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-home-landing.css?samhc4">
     <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/css2.css">
    -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
