--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,7 +55,8 @@
     </style>
 </head>
 
-<body class="d-flex flex-column vh-100" react-cloak >
+<body class="" react-cloak >
+  <div class="" data-off-canvas-main-canvas>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <section class="usa-banner" aria-label="Official government website">
     <header class="usa-banner__header">
@@ -67,8 +68,8 @@
     </header>
   </section>
   
-  <header id= "nci-header" class="nci-header nci-header--extended" aria-label="NIH National Cancer Institute">
-    <div class="nci-header__navbar">
+  <header id= "nci-header" class="nci-header" aria-label="NIH National Cancer Institute">
+    <div class="nci-header__navbar" >
       <div class="nci-logo" id="extended-mega-logo">
         <a href="https://ccr.cancer.gov/" target="_blank" class="h5 mb-1">
           <img src="assets/images/logo.svg" class="img-fluid my-3" alt="National Cancer Institute"
@@ -108,6 +109,7 @@
       </div>
     </nav> -->
   </header>
+</div>
 <div id="page">
  <main id="root" class="d-flex flex-column flex-grow-1 align-items-stretch bg-light"></main>
 </div>
@@ -116,7 +118,7 @@
   <footer class="usa-footer usa-footer--nci-big" id="nci-footer" aria-label="Footer">
 
     <div class="usa-footer__primary-section">
-      <div class="grid-container">
+      <div class="grid-footer-container">
         <div class="grid-row grid-gap">
           <div class="tablet:grid-col-8">
             <nav class="usa-footer__nav" aria-label="FooterNavigation_Site">
@@ -169,7 +171,7 @@
       </div>
     </div>
     <div class="usa-footer__secondary-section">
-      <div class="grid-container">
+      <div class="grid-footer-container">
         <div class="grid-row grid-gap">
           <div class=" usa-footer__logo grid-row desktop:grid-col-5">
             <div class="mobile-lg:grid-col-auto mobile-lg:margin-bottom-3">
@@ -298,7 +300,7 @@
       handleClick(event, this.getAttribute('href'));
     });
   </script>
-  
+ 
  
 </body>
 
