make logo align with the navbar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,19 +58,23 @@
 <body class="" react-cloak >
   <div class="" data-off-canvas-main-canvas>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  
   <section class="usa-banner" aria-label="Official government website">
     <header class="usa-banner__header">
       <div class="usa-banner__inner">
-        <div class="usa-banner__header-text">
+        <div class="container" >
+          <div class="usa-banner__header-text">
           An official website of the United States government
         </div>
+      </div>
+        
       </div>
     </header>
   </section>
   
   <header id= "nci-header" class="nci-header" aria-label="NIH National Cancer Institute">
     <div class="nci-header__navbar" >
-      <div class="nci-logo" id="extended-mega-logo">
+      <div class="nci-logo container" id="extended-mega-logo">
         <a href="https://ccr.cancer.gov/" target="_blank" class="h5 mb-1">
           <img src="assets/images/logo.svg" class="img-fluid my-3" alt="National Cancer Institute"
             style="height: 56px; max-width: 100%" />
@@ -109,6 +113,7 @@
       </div>
     </nav> -->
   </header>
+
 </div>
 <div id="page">
  <main id="root" class="d-flex flex-column flex-grow-1 align-items-stretch bg-light"></main>
