--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;
+        0,600;1,300;1,400;1,600&family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600
+        &family=Roboto+Mono:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap"
+        rel="stylesheet"
+    />
+
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-minimal.css?samhc4">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ncids-home-landing.css?samhc4"> 
@@ -77,7 +86,7 @@
       <div class="nci-logo container" id="extended-mega-logo">
         <a href="https://ccr.cancer.gov/" target="_blank" class="h5 mb-1">
           <img src="assets/images/logo.svg" class="img-fluid my-3" alt="National Cancer Institute"
-            style="height: 56px; max-width: 100%" />
+             />
           <span class="visually-hidden">
             Division of Cancer Control and Population Sciences
           </span>
