--- a/client/public/index.html
+++ b/client/public/index.html
@@ -84,11 +84,18 @@
   <header id= "nci-header" class="nci-header" aria-label="NIH National Cancer Institute">
     <div class="nci-header__navbar">
       <div class="nci-logo" id="extended-mega-logo">
+        <!-- Desktop logo -->
         <a href="https://ccr.cancer.gov/" target="_blank" class="h5 mb-1">
-          <img src="assets/images/logo.svg" class="img-fluid my-3" alt="National Cancer Institute" style="height: 56px;" />
-          <span class="visually-hidden">Division of Cancer Control and Population Sciences</span>
-        </a>       
-      </div>
+            <img src="assets/images/logo.svg" class="img-fluid my-3 desktop-logo" alt="National Cancer Institute" style="height: 56px;" />
+            <span class="visually-hidden">Division of Cancer Control and Population Sciences</span>
+        </a>  
+        <!-- Mobile logo -->
+        <a href="https://ccr.cancer.gov/" target="_blank" class="h5 mb-1">
+            <img src="assets/images/mobile-logo.svg" class="img-fluid my-3 mobile-logo" alt="National Cancer Institute" style="height: 56px;" />
+            <span class="visually-hidden">Division of Cancer Control and Population Sciences</span>
+        </a>
+    </div>
+    
       <div class="d-flex mb-3">
         <div class="nci-header-search"></div>
           <form
