Modify button and credit section

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -114,7 +114,7 @@
               />
               <div class="input-group-append">
                 <button
-                  class="btn btn-outline-secondary search-control-button"
+                  class="btn btn-outline-secondary search-control-button custom-blue-button"
                   type="submit"
                 >
                   <span class="fas fa-search"></span>
