add version and date

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -193,6 +193,10 @@
                     <ul aria-label="Header 1 Site" class="usa-list usa-list--unstyled hidden " id="accordion1">
                       <li class="usa-footer__secondary-link"><a href="/#/about/" id="aboutLink">About mCA Explorer</a></li>                      
                       <li class="usa-footer__secondary-link"><a  href="mailto:NCImcaExplorerWebAdmin@mail.nih.gov">Contact Us</a></li>
+                      <li class="usa-footer__secondary-link"></li>
+                      <li class="usa-footer__secondary-link"></li>
+                      <li class="usa-footer__secondary-link">Last Updated: 2026-02-19</li>
+                      <li class="usa-footer__secondary-link">Version: 2.0.0</li>
                     </ul>
                   </section>
                 </div>
